@@ -5,6 +5,9 @@ hw-detect (1.33) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Replace another udevsynthesize call with update-dev.
+  * Remove old DEB_HOST_ARCH_* and CFLAGS_ARCH cruft.
+  * Fix CFLAGS so that the apparently-intended version formerly in
+    debian/rules actually gets used; no impact on size, though.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 13 Jan 2006 23:58:31 +0000
 
